Updated the Azure Pipeline

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -40,12 +40,6 @@ extends:
         templateContext:
           outputs:
           - output: nuget
-            displayName: 'NuGet push to VS feed'
-            condition: and(succeeded(), eq(variables['Build.OfficialRelease'], 'true'))
-            packageParentPath: '$(Build.ArtifactStagingDirectory)\Packages'
-            packagesToPush: $(Build.ArtifactStagingDirectory)\Packages\*.nupkg;!$(Build.ArtifactStagingDirectory)\Packages\*.symbols.nupkg
-            publishVstsFeed: 97a41293-2972-4f48-8c0e-05493ae82010
-          - output: nuget
             displayName: 'NuGet push to NuGet.org'
             condition: and(succeeded(), eq(variables['Build.OfficialRelease'], 'true'))
             packageParentPath: '$(Build.ArtifactStagingDirectory)\Packages'
@@ -69,9 +63,9 @@ extends:
             version: 6.x
             performMultiLevelLookup: true
         - task: NuGetToolInstaller@1
-          displayName: Use NuGet 6.9.1
+          displayName: Use NuGet 6.x
           inputs:
-            versionSpec: 6.9.1
+            versionSpec: 6.x
         - task: NuGetAuthenticate@1
           displayName: NuGet Authenticate
         - task: NuGetCommand@2
@@ -85,6 +79,7 @@ extends:
             platform: Any CPU
             configuration: Release
             clean: true
+            msbuildArgs: /p:PublicRelease=$(Build.OfficialRelease)
         - task: VSTest@2
           displayName: Run Unit Tests
           inputs:
@@ -96,5 +91,5 @@ extends:
           displayName: Build Mappings NuGet package
           inputs:
             solution: src\UpgradeAssistant.Mappings\UpgradeAssistant.Mappings.csproj
-            msbuildArgs: /t:Pack /p:TimestampPackage=$(TimestampPackage) /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)\Packages"
-            configuration: Release
+            msbuildArgs: /t:Pack /p:PublicRelease=$(Build.OfficialRelease) /p:TimestampPackage=$(TimestampPackage) /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)\Packages"
+            configuration: release
