Fix the wildcards used to determine unit test assembly names
This will hopefully fix the Azure pipeline logic for running the unit tests.

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -84,9 +84,7 @@ extends:
           displayName: Run Unit Tests
           inputs:
             testAssemblyVer2: |-
-              **\*UnitTests.dll
-              !**\*TestAdapter.dll
-              !**\obj\**
+              **\UpgradeAssistant.*.Tests.dll
         - task: VSBuild@1
           displayName: Build Mappings NuGet package
           inputs:
