Pack UpgradeAssistant.Mappings w/o the dll

--- a/src/UpgradeAssistant.Mappings/UpgradeAssistant.Mappings.csproj
+++ b/src/UpgradeAssistant.Mappings/UpgradeAssistant.Mappings.csproj
@@ -16,6 +16,7 @@
     <RepositoryUrl>https://github.com/dotnet/upgrade-assistant</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
 
   <ItemGroup>
